--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Structurer un contenu
-HTML</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Styliser des pages HTML avec du CSS</title>
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header>
-    <h1>Contenu projet “Structurer un contenu
-HTML”</h1>
-  </header>
   <main>
     <article>
       <header>
-        <h2>Page 1 : Histoire d’Internet</h2>
+        <h1>Histoire d’Internet</h1>
       </header>
       <div>
         <p>
@@ -44,9 +39,9 @@ la bulle Internet.</p>
         
       </div>
       <div>
-        <h3>
+        <h2>
           Chronologie sélective
-        </h3>
+        </h2>
         <table>
           <thead>
             <tr>
@@ -176,7 +171,7 @@ américains.</td>
         <div>
           
         <figure>
-          <img src="ordinateur.jpg" alt="Ordinateur" title="Un ordinateur" width="700">
+          <img src="assets/img/ordinateur.jpg" alt="Ordinateur" title="Un ordinateur" width="700">
           <figcaption>
             <p>
             Fig.1 - Le premier​ serveur web​, actuellement au musée du​ CERN​, étiqueté </p><em>
@@ -187,7 +182,7 @@ server. DO NOT POWER IT DOWN!!
           </figcaption>
         </figure>
         </div>
-        <h3>Protocole TCP/IP</h3>
+        <h2>Protocole TCP/IP</h2>
         <div>
           <p>L'abondante diversité des méthodes de communications réseau amena un besoin
 d'uniformisation. Robert E. Kahn recruta Vinton G. Cerf de l'université Stanford dans le but de
@@ -209,7 +204,7 @@ précédent protocole NCP2.</p>
       </div>
     </article>
   </main>
-  <script src="script.js"></script>
+  <script src="assets/js/ascript.js"></script>
 </body>
 
 </html>
