--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <main>
     <article>
       <header>
-        <h1>Histoire d’Internet</h1>
+        <h1 class="title title-1">Histoire d’Internet</h1>
       </header>
       <div>
         <p>
             L’<strong>​histoire d'Internet​</strong> remonte au développement des premiers réseaux de télécommunication.
   L’idée d’un réseau informatique, permettant aux utilisateurs de différents ordinateurs de
   communiquer, se développa par de nombreuses étapes successives. La somme de tous ces
-  développements conduisit au « réseau des réseaux » (​network of networks​) que nous
+  développements conduisit au « réseau des réseaux » <span class="explanation">(​network of networks​)</span> que nous
   connaissons aujourd’hui en tant qu'Internet. Il est le fruit à la fois de développements
   technologiques et du regroupement d’infrastructures réseau existantes et de systèmes de
   télécommunications.
@@ -39,7 +39,7 @@ la bulle Internet.</p>
         
       </div>
       <div>
-        <h2>
+        <h2 class="title title-2">
           Chronologie sélective
         </h2>
         <table>
@@ -182,7 +182,7 @@ server. DO NOT POWER IT DOWN!!
           </figcaption>
         </figure>
         </div>
-        <h2>Protocole TCP/IP</h2>
+        <h2 class="title title-2">Protocole TCP/IP</h2>
         <div>
           <p>L'abondante diversité des méthodes de communications réseau amena un besoin
 d'uniformisation. Robert E. Kahn recruta Vinton G. Cerf de l'université Stanford dans le but de
