--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="container">
     <article>
       <header>
         <h1 class="title title-1">Histoire d’Internet</h1>
@@ -61,7 +61,7 @@ la bulle Internet.</p>
               <td>Les​ Laboratoires Bell​ créent le premier Modem permettant de transmettre des
 données binaires sur une simple ligne téléphonique</td>
             </tr>
-            <tr>
+            <tr class="row-important">
               <td><strong>1961</strong></td>
               <td>Leonard Kleinrock​ du​ Massachusetts Institute of Technology​ publie une première
 théorie sur l'utilisation de la​ commutation de paquets​ pour transférer des données.</td>
@@ -170,7 +170,7 @@ américains.</td>
         </table>
         <div>
           
-        <figure>
+        <figure class="description-img">
           <img src="assets/img/ordinateur.jpg" alt="Ordinateur" title="Un ordinateur" width="700">
           <figcaption>
             <p>
@@ -192,7 +192,7 @@ protocole de communication : au lieu d'asseoir la fiabilité du réseau sur les 
 avec l'ARPANET, les hôtes en étaient maintenant responsables. Vinton G. Cerf attribua à
 Hubert Zimmermann et Louis Pouzin (développeurs du réseau Cyclades) un important travail de
 développement.</p>
-          <p>Avec le rôle du réseau physique réduit à son strict minimum, il devint alors possible de
+          <p class="ending">Avec le rôle du réseau physique réduit à son strict minimum, il devint alors possible de
 fusionner à peu près tout type de réseau sans tenir compte de leurs caractéristiques et ainsi
 résoudre le problème que s'était posé Robert E. Kahn à ses débuts. La DARPA accepta de
 financer le développement du logiciel prototype, et après plusieurs années de travail, la
