add second pages and Finalisation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ la bulle Internet.</p>
               <td>Les​ Laboratoires Bell​ créent le premier Modem permettant de transmettre des
 données binaires sur une simple ligne téléphonique</td>
             </tr>
-            <tr class="row-important">
+            <tr>
               <td><strong>1961</strong></td>
               <td>Leonard Kleinrock​ du​ Massachusetts Institute of Technology​ publie une première
 théorie sur l'utilisation de la​ commutation de paquets​ pour transférer des données.</td>
@@ -175,9 +175,9 @@ américains.</td>
           <figcaption>
             <p>
             Fig.1 - Le premier​ serveur web​, actuellement au musée du​ CERN​, étiqueté </p><em>
-              <q>« ​This machine is a
+              <q> ​This machine is a
 server. DO NOT POWER IT DOWN!!
-​ »</q>
+​ </q>
             </em>
           </figcaption>
         </figure>
